# Pattern-Motion-Project

./: .gitignore  INSTALLATION_TUTORIAL.md  README.md  pyproject.toml  testing.ipynb
examples/: template_pattern_modificabile.pptx
examples/data/: frequenze_statici_video.csv  pattern_statici_DelViva.csv  tiny_video_binary.avi  topk.csv  topk_riconteggio.csv
notebooks/: notebook_motion.ipynb  notebook_statici.ipynb  testing.ipynb
scripts/: binary_video_converter.py
src/motionpattern/: binary_converter.py  pattern_table.py  plot_pattern.py  sketch_generator.py  spezzetta_sketch.py
src/staticpattern/: counting.py
tutorial/: BINARY_VIDEO_CONVERTER.md  INSTALLATION_TUTORIAL.md  MANIPOLAZIONE_DATI.md  SKETCH_GENERATOR.md  SPEZZETTA_SKETCH.md
