[project]
name = "motionpattern"
version = "0.1.0"
description = "Utilities for video sketching and pattern extraction"
requires-python = ">=3.10"

# QUI mettiamo le dipendenze reali
dependencies = [
    "numpy",
    "pandas",
    "opencv-python",
    "matplotlib",
    "scikit-image",
    "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
